Squashed commit of the following:
commit 1f2b5cb5d60add52ac89140270db6d88eacadf6c
Author: tym <1772314831@qq.com>
Date:   Sun Jul 19 13:25:29 2020 +0800

    PC样式优化

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
-<footer class="footer select-none">
+<footer class="footer">
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS订阅</a>
   {%- comment %} 请保留主题来源，么么哒~ {% endcomment %}
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
 </footer>
-<div id="to-top" class="select-none">
+<div id="to-top">
   <span></span>
   <span></span>
 </div>
