--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header select-none">
+<header class="header">
   <img class="logo" src="{{ site.baseurl }}/static/img/logo.jpg" />
   <nav class="menu">
     {% for menu in site.menu -%}
