--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,10 @@
 {%- assign buildAt = site.time | date: "%Y%m%d%H%M%S" -%}
 <head>
   <title>{{ page.title }}-{{ site.title }}</title>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta charset="utf-8" />
   <meta http-equiv="content-language" content="zh-CN" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="applicable-device" content="pc,mobile">
   <meta name="google-site-verification" content="ckhUaoa05QCmWoE1FafzTBcqYI4yBOy-UJKopXDS18M" />
   <meta name="author" content="{{ site.author }}" />
@@ -14,14 +15,15 @@
   <meta name="description" content="{{ site.description }}"/>
   <meta name="keywords" content="{{ site.keywords }}"/>
   {% endif -%}
-  <link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/common.css?t={{buildAt}}">
+  <link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" />
+  <link rel="apple-touch-icon" href="{{site.baseurl}}/static/img/logo.png" />
   {%- if page.layout == "mypost" %}
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/common.css?t={{buildAt}}">
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/post.css?t={{buildAt}}">
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/highlight.css?t={{buildAt}}">
   {%- endif %}
   {%- if page.layout == "page" %}
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/common.css?t={{buildAt}}">
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/page.css?t={{buildAt}}">
   {%- endif %}
 </head>
