--- a/static/css/page.css
+++ b/static/css/page.css
@@ -3,28 +3,41 @@
   font-weight: bold;
   padding: 12px 0;
 }
+.list-post ul {
+  box-sizing: border-box;
+  padding-left: 15px;
+}
 .list-post li {
-  padding: 12px 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  display: flex;
+  align-items: center;
+  padding: 8px 0;
 }
 .list-post li .date {
-  padding: 0 8px 0 16px;
   color: #666666;
   font-size: 14px;
-  vertical-align: middle;
+  flex-shrink: 0;
+  margin-right: 10px;
 }
 .list-post li .title {
-  font-size: 15px;
-  padding: 3px 0;
-  vertical-align: middle;
+  width: 0;
+  flex-grow: 1;
+  padding: 4px 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.list-post li .category {
+.list-post li .title a {
+  font-size: 15px;
+}
+.list-post li .categories {
+  flex-shrink: 0;
+  padding: 3px 0;
+  margin-left: 10px;
+}
+.list-post li .categories a {
   font-size: 12px;
   color: #666666;
   margin-left: 8px;
-  vertical-align: middle;
 }
 .list-category h2 {
   font-size: 15px;
@@ -97,21 +110,18 @@
     padding: 10px 0;
   }
   .list-post li {
-    padding: 10px 0;
+    padding: 6px 0;
   }
-  .list-post li .date {
-    font-size: 12px;
+  .list-post li .title a {
+    font-size: 14px;
   }
-  .list-post li .title {
-    font-size: 13px;
-  }
-  .list-post li .category {
-    font-size: 11px;
+  .list-post .categories {
+    display: none;
   }
   .list-category h2 {
     padding: 10px 0;
   }
   .list-category div a {
-    font-size: 13px;
+    font-size: 14px;
   }
 }
