--- a/static/css/post.css
+++ b/static/css/post.css
@@ -31,7 +31,6 @@
   top: 0;
   font-weight: bold;
   padding-right: 6px;
-  color: #333333;
 }
 .page-post h3,
 .page-post h4,
@@ -82,36 +81,40 @@
   margin: 0 4px;
   line-height: 1;
 }
-.page-post code {
-  background-color: #eeeeee;
-  word-break: break-all;
-  padding: 0 4px;
-  margin: 0 2px;
-  border-radius: 4px;
-  color: #4d4d4c;
-}
 .page-post pre {
   font-size: 0;
   padding: 10px;
   overflow: auto;
   border-radius: 2px;
-  background-color: #f7f7f7;
   max-height: 610px;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
+  line-height: 1.6;
+}
+.page-post code {
+  font-size: 13px;
+  background-color: #eeeeee;
+  word-break: break-all;
+  padding: 3px 5px;
+  margin: 0 4px;
+  border-radius: 5px;
+  color: #4d4d4c;
+  transition: all 500ms ease;
 }
 .page-post pre code {
-  background-color: transparent;
   font-size: 13px;
+  background-color: transparent !important;
+  word-break: keep-all;
   padding: 0;
   margin: 0;
-  line-height: 1.6;
+  border-radius: unset;
+  color: inherit;
 }
 .page-post hr {
   border: none;
-  height: 1px;
-  background-color: #f5f5f5;
+  height: 3px;
+  background-color: #eeeeee;
 }
 .page-post table {
   min-width: 100%;
