--- a/static/css/theme-dark.css
+++ b/static/css/theme-dark.css
@@ -42,7 +42,8 @@ html.dark .page-post a {
   color: #58a6ff;
   border-bottom: 1px solid #58a6ff;
 }
-html.dark .page-post strong, .page-post b{
+html.dark .page-post strong,
+html.dark .page-post b {
   color: #ffffff;
 }
 html.dark .page-post blockquote {
