--- a/_includes/script.html
+++ b/_includes/script.html
@@ -23,3 +23,5 @@
 {%- if site.extMath and page.layout=="mypost" -%}
 {% include ext-mathjax.html %}
 {% endif %}
+
+{% include ext-serviceWorker.html %}
