--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 {% include head.html -%}
 <body ondragstart="return false;">
 {% include header.html -%}
