--- a/static/css/code-dark.css
+++ b/static/css/code-dark.css
@@ -7,6 +7,7 @@ html.dark pre.highlight {
 html.dark .highlight pre {
   /* background: #282c34; */
   background: #161b22;
+  font-family: monospace;
 }
 html.dark .highlight .hll {
   background: #282c34;
