--- a/_includes/script.html
+++ b/_includes/script.html
@@ -19,3 +19,7 @@
     {% include ext-mathjax.html %}
   {% endif %}
 {% endif %}
+
+{%- if site.extCount %}
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+{% endif %}
