--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -6,7 +6,13 @@
 <div class="page page-post">
   <h1 class="title" id="{{ page.title }}">{{ page.title }}</h1>
   {% if page.date %}
-  <div class="subtitle">{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</div>
+  <div class="subtitle">
+    <span>{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</span>
+    {%- if site.extCount %}
+      <span>浏览量</span>
+      <span id="busuanzi_value_page_pv"></span>
+    {% endif %}
+  </div>
   {% endif %}
   <div class="post">
     {{ content }}
